# ZetaTrade

./: .gitignore  CMakeLists.txt  Readme.md  Smoketest.bat  promptpush.bat  pythonrunner.bat  runtest.bat
.github/workflows/: ci.yml
configs/: bench.yaml  demo_strategy.yaml  replay.yaml
cpp/apps/: bench_main.cpp  replay_main.cpp  trade_main.cpp
cpp/include/zetaforge/: config.hpp  types.hpp
cpp/include/zetaforge/bench/: bench_runner.hpp
cpp/include/zetaforge/book/: l2_book.hpp
cpp/include/zetaforge/ingest/: jsonl_reader.hpp
cpp/include/zetaforge/oms/: order_gateway.hpp
cpp/include/zetaforge/risk/: risk_gate.hpp
cpp/include/zetaforge/sim/: exchange_sim.hpp
cpp/include/zetaforge/util/: logging.hpp  metrics.hpp  time.hpp
cpp/src/bench/: bench_runner.cpp
cpp/src/book/: order_book.cpp
cpp/src/ingest/: jsonl_reader.cpp
cpp/src/oms/: order_gateway.cpp
cpp/src/risk/: risk_gate.cpp
cpp/src/sim/: exchange_sim.cpp
cpp/src/util/: config.cpp  logging.cpp  metrics.cpp  time.cpp
cpp/tests/: test_oms_state_machine.cpp  test_order_book.cpp  test_risk_gate.cpp
data/: sample_day.jsonl
docker/: Dockerfile  docker-compose.yml
docker/initdb/: 01_schema.sql
docs/: benchmarks.md  design.md
python/: requirements.txt
python/analysis/: export_to_db.py  plot_bench.py
python/orchestration/: run_bench.py
